--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -29,10 +29,10 @@ fr:
   "connection marketing": "YouVersion est plus amusant avec des amis ! Reliez votre compte YouVersion à vos autres autres réseaux sociaux puis trouvez et suivez vos amis instantanément sur YouVersion. Le fait de lier vos comptes vous permet également d'en partager le contenu en quelques clics. Nous n'afficherons rien sans votre consentement."
   "next step connections": "Ensuite: Reliez votre compte et retrouvez vos amis"
   "you are now following": "Maintenant vous suivez %{username}"
-  "you are no longer following": "Vous ne suivez plus %{usrname}"
+  "you are no longer following": "Vous ne suivez plus %{username}"
   "user follows": "%{user} vous suit."
   "user does not follow": "%{user} ne vous suit pas."
-  "no following found self": "Vous n'avez aucun abonnement pour l'instant. Visitez la page <a href='%{link}'>Find Friends</a> et faites-vous des amis!"
+  "no following found self": "Vous n'avez aucun abonnement pour l'instant. Visitez la page <a href='%{link}'>Find Friends</a> et faites-vous des amis! *NC*"
   "no followers found self": "Vous n'avez aucun abonné pour l'instant. Visitez la page <a href='%{link}'>Find Friends</a> et trouvez des amis!"
   "no followers found other": "%{username} n'a pour l'instant aucun abonné. "
   "no following found other": "%{username} n'a aucun abonnement pour l'instant."
@@ -171,6 +171,7 @@ fr:
     "profile form errors": "L'erreur (les erreurs) suivante(s) empêche(nt) la création de votre profil: "
     "email address": "Adresse Email :"
     "user name": "Nom d'utilisateur :"
+    "password title": "Mot de passe"
     "agreement": "J'accepte les termes et les conditions de YouVersion %{terms_link}."
     "terms and conditions": "Les Termes et Conditions d'utilisation"
     "facebook sign up success": "Super! Accès autorisé via Facebook. Choisissez un nom d'utilisateur et un mot de passe YouVersion pour continuer."
@@ -186,7 +187,7 @@ fr:
     "user does not follow you": "%{user} ne vous suit pas"
     "recent activity": "Les activités récentes "
     "started following": "S'est abonné"
-    "subscribed to plan": "Les utilisateurs inscrits à %{plan}"
+    "subscribed to plan": "Les utilisateurs inscrits au %{plan}"
     "reading": "Les utilisateurs lisant ce plan"
     "subscribed previously": "Commencé il y a %{time_ago} "
     "sign in for settings": "Vous devez vous connecter afin d'accéder à votre profil."
@@ -223,6 +224,26 @@ fr:
     "yes reset": "Oui, réinitialiser mon mot de passe"
     "yes reset and log out": "Oui, me déconnecter et réinitialiser mon mot de passe"
     "forgot password": "Mot de passe oublié?"
+    "privacy": 
+      "policy": "Politique de Confidentialité %{youversion}"
+      "what we collect": "Ce que nous recevons et l'usage que nous en faisons"
+      "your information title": "L'information que vous fournissez"
+      "device id title": "Numéro UDID"
+      "device id text": "Lorsque vous accédez à la Bible App de YouVersion, nous pouvons récupérer votre numéro de série (\"UDID\") ou adresse IP. Nous les utilisons afin de vous apporter une expérience sur-mesure. L'UDID est recensée à des fins statistiques, pour l'analyse de données et aussi pour communiquer plus efficacement avec vous. Nous pourrons associer votre UDID avec des informations tierces dans le but d'optimiser votre expérience avec nous et améliorer notre qualité de service. nous ne partageons aucune donnée personnelle relative à votre UDID avec  des tiers."
+      "cookies title": "Cookies LifeChurch.tv"
+      "communications title": "Communications utilisateur"
+      "third party title": "Sites externes"
+      "information use title": "Comment utilisons-nous vos informations?"
+      "information sharing title": "Comment partageons-nous vos informations?"
+      "information security title": "Sécurité des informations"
+      "data integrity title": "Véracité des données"
+      "information access title": "Accéder et mettre à jour ses données personnelles"
+      "questions title": "Questions"
+    "terms": 
+      "title": "Conditions d'utilisation "
+      "links title": "Liens"
+      "trademark title": "Marques déposées"
+      "general title": "Informations générales"
     "profile": 
       "first name": "Prénom"
       "last name": "Nom"
