--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -107,13 +107,15 @@ nl:
   "next page": "Volgende Bladzijde"
   "previous page": "Vorige Bladzijde"
   "invalid username or password": "Ongeldige gebruikersnaam of wachtwoord"
-  "show all bookmarks": "Toon alle %{totaal} bladwijzers"
-  "show all notes": "Toon alle %{totaal} notities"
+  "show all bookmarks": "Toon alle %{total} bladwijzers"
+  "show all notes": "Toon alle %{total} notities"
   "recent bookmarks": "Recente Bladwijzers"
   "percentage display": "%{number}%"
   "myself": "Ik"
   "none found": "We konden niets vinden volgens je criteria. Probeer je zoekopdracht uit te breiden."
   "paginated items shown": "%{first_shown}&ndash;%{last_shown} van %{total_available}\n"
+  "160 character limit": "160 tekens of minder"
+  "recent versions": "Recentelijk gebruikt"
   "likes": 
     "my likes": "Mijn Leuk gevonden"
     "all likes": "Alle Leuk gevonden"
@@ -145,6 +147,7 @@ nl:
     "see my likes": "Zie al mijn Leuk gevonden"
     "my notes": "Mijn Notities"
   "ref": 
+    "clear verses": "Wis geselecteerde verzen"
     "choose book and chapter": "Kies Boek + Hoofdstuk"
     "choose version": "Kies Versie"
     "choose second version": "Kies Secundaire Versie"
@@ -159,6 +162,7 @@ nl:
     "settings": "Lezer Instellingen"
     "invalid chapter title": "Over Deze Versie"
     "invalid chapter text": "Dit hoofdstuk bestaat niet in deze versie."
+    "invalid secondary chapter text": "Dit hoofdstuk bestaat niet in je tweede voorkeursversie."
     "select another chapter": "Kies een ander Hoofdstuk"
     "view in reader": "Bekijk %{reference} in Lezer"
     "about the": "Over de"
@@ -167,6 +171,7 @@ nl:
     "profile form errors": "De volgende fout(en) voorkomen dat je jouw profiel kan updaten:"
     "email address": "E-mail adres"
     "user name": "Gebruikersnaam"
+    "password title": "Wachtwoord"
     "agreement": "Ik ga akkoord met de YouVersion %{terms_link}"
     "terms and conditions": "Algemene Voorwaarden"
     "facebook sign up success": "Super! Je hebt toestemming gegeven met Facebook. Kies een YouVersion gebruikersnaam en wachtwoord om verder te gaan."
@@ -207,6 +212,18 @@ nl:
     "my likes": "Mijn 'Vind ik Leuk'"
     "user likes": "%{user}'s Leuk gevonden"
     "revised date": "Laatst herzien op %{date}"
+    "update email copy": "Typ een nieuw e-mail adres in en klik op E-mail Updaten. We zullen je een link sturen naar je nieuwe e-mail adres."
+    "update email button": "E-mail Updaten"
+    "update email check": "Check a.j.b. je e-mail en klik op de link om je nieuwe e-mail adres te bevestigen."
+    "confirm update email success": "Bedankt! Je e-mail adres is geüpdated."
+    "confirm update email error": "Sorry, er was een probleem met het voltooien van je e-mail adres wijziging."
+    "invalid email forgot": "Sorry, we konden geen account vinden onder dat e-mail adres. Probeer het opnieuw."
+    "send new password button": "Nieuw Wachtwoord Sturen"
+    "forgot password copy": "Typ je e-mail adres in en klik op Nieuw Wachtwoord Sturen, en we zullen je een nieuw wachtwoord sturen."
+    "forgot password check": "Gelukt! Check je e-mail voor je nieuwe wachtwoord."
+    "yes reset": "Ja, reset mijn wachtwoord"
+    "yes reset and log out": "Ja, log me uit en reset mijn wachtwoord"
+    "forgot password": "Wachtwoord vergeten?"
     "privacy": 
       "policy": "%{youversion} Privacybeleid"
       "intro": "YouVersion, een website en application in bezit van en uitgevoerd door LifeChurch.tv, weet dat het van belang is hoe we jouw informatie gebruiken en delen. We hopen dat de volgende verklaringen duidelijk maken hoe YouVersion de informatie die jij ons verschaft op onze site of app, zal verzamelen, gebruiken en beschermen. Wij zullen je informatie niet gebruiken of delen op enige andere wijze dan beschreven in dit Privacybeleid."
@@ -310,6 +327,7 @@ nl:
       "updated notifications": "Succes! Je hebt je meldingsinstellingen bijgewerkt."
       "notification errors": "De volgende fout(en) voorkomen dat je jouw notificaties can updaten:"
       "edit": "Bewerk"
+      "bio": "Biografie"
       "your current picture": "Je Huidige Foto:"
     "password": "Wachtwoord"
     "notifications": 
@@ -406,6 +424,28 @@ nl:
       "screencast": "YouVersion Screencast"
     "links title": "Media Verslagen Links"
   "mobile page": 
+    "h2": "Gods Woord is met jou."
+    "h3": "YouVersion is Wereldwijd"
+    "h3 sub": "Beschikbaar in honderden talen wereldwijd."
+    "main": "Tientallen millioenen mensen gebruiken de Bible App (tm) om Gods Woord een deel van hun leven te maken. Download de gratis app en krijg toegang op je bladwijzers, notitities, en leesplannen vanuit elke plek. Geniet van honderden versies, inclusief audio, alles op je mobiele apparaat."
+    "button h4": "Ga naar youversion.com/download"
+    "button h4 sub": "Op je Mobiele Apparaat"
+    "download now": "Download nu De Bijbel App"
+    "what people": "Wat mensen over de gratis Bijbel app zeggen..."
+    "t1": "Ik heb het Woord altijd bij."
+    "t1 copy": "Ik heb bladwijzers gezet bij verzen die voor mij belangrijk zijn. Ik heb zelfs de Bijbel in een jaar helemaal uitgelezen dankzij de leesplannen. "
+    "t2": "Leuke programma!"
+    "t2 copy": "Deze app helpt mij om alles in orde te hebben en om Gods Woord te lezen elke dag. Het is makkelijk te bedienen en biedt veel fucties. Ik ben er dol op!"
+    "t3": "Geweldige app."
+    "t3 copy": "Leuke app met een brede keuze aan Bijbels. De Audiobijbels zijn ook geweldig en makkelijk te begrijpen."
+    "iphone ipad": "iPhone/iPad"
+    "android": "Android"
+    "blackberry": "BlackBerry"
+    "windows phone": "Windows Phone"
+    "hp palm": "HP/Palm"
+    "java": "Java"
+    "symbian": "Symbian"
+    "mobile web": "Mobiele Internet"
   "registered": "Geregistreerd "
   "ago": "geleden"
   "are you sure": "Weet je het zeker?"
