--- a/config/locales/no.yml
+++ b/config/locales/no.yml
@@ -56,7 +56,7 @@
   "my notifications": "Håndter varslinger"
   "my connections": "Tilkoblede kontoer"
   "my devices": "Tilkoblede enheter"
-  "language name": "norske"
+  "language name": "Norsk"
   "sign in": "Logg inn"
   "sign up": "Registrer deg"
   "have an account": "Har du allerede en konto?"
@@ -170,6 +170,7 @@
     "profile form errors": "De følgende feil(ene) forhindret oppdatering av kontoen din: "
     "email address": "E-postadresse"
     "user name": "Brukernavn"
+    "password title": "Passord"
     "agreement": "Jeg godtar %{terms_link} til YouVersion."
     "terms and conditions": "vilkår"
     "facebook sign up success": "Flott! Du har godkjent kobling til med Facebook. Velg et YouVersion-brukernavn og -passord for å fortsette."
@@ -426,12 +427,12 @@
     "button h4": "Gå til youversion.com/download"
     "button h4 sub": "På din mobile enhet"
     "download now": "Last ned Bibel-appen nå"
-    "what people": "Dette sier folk om den gratis bibel-appen..."
+    "what people": "Dette sier folk om den gratis Bibel-appen..."
     "t1": "Jeg har alltid Ordet."
     "t1 copy": "Jeg har satt bokmerke ved skriftsteder som er viktige for meg. Jeg har til og med lest gjennom hele greia i løpet av ett år takket være leseplanene."
     "t2": "Supert program!"
     "t2 copy": "Denne appen hjelper meg til å være organisert og lese Guds ord hver eneste dag.  Den er lett å bruke og tilbyr mange ulike funksjoner... Elsker den!"
-    "t3": "Fantastisk app."
+    "t3": "Storartet app."
     "t3 copy": "Kjempebra app med stort utvalg i bibelutgaver... Lydbiblene er også fantastiske og lette å forstå."
     "iphone ipad": "iPhone/iPad"
     "android": "Android"
