--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -170,6 +170,7 @@ pl:
     "profile form errors": "Poniższe błędy uniemożliwiły aktualizację twojego profilu: "
     "email address": "Adres e-mail"
     "user name": "Nazwa użytkownika"
+    "password title": "Hasło"
     "agreement": "Zgadzam się z %{terms_link} YouVersion."
     "terms and conditions": "Warunki użytkowania"
     "facebook sign up success": "Doskonale! Dokonałeś autoryzacji przez Facebooka. By kontynuować, wybierz nazwę użytkownika YouVersion i hasło. "
@@ -214,11 +215,47 @@ pl:
     "update email button": "Uaktualnij e-mail"
     "update email check": "Prosimy sprawdź swoją skrzynkę i kliknij odnośnik potwierdzenia twojego nowego adresu."
     "confirm update email success": "Dziękujemy! Uaktualniłeś swój adres e-mail."
+    "confirm update email error": "Niestety, pojawił się problem przy zmianie twojego adresu e-mail."
+    "invalid email forgot": "Niestety, nie mogliśmy znaleźć konta z podanym adresem e-mail. Spróbuj ponownie."
     "send new password button": "Wyślij nowe hasło"
+    "forgot password copy": "Wprowadź swój adres e-mail i kliknij Wyślij nowe hasło, a my wyślemy ci nowe hasło."
     "forgot password check": "Sprawdź swoją skrzynkę, aby ustawić nowe hasło."
     "yes reset": "Tak, ustaw nowe hasło"
     "yes reset and log out": "Tak, wyloguj mnie i ustaw nowe hasło"
     "forgot password": "Zapomniałeś swoje hasło?"
+    "privacy": 
+      "policy": "Polityka prywatności %{youversion} "
+      "intro": "YouVersion, Strona i Aplikacja, której właścicielem i operatorem jest LifeChurch.tv, wie, że zależy ci na odpowiednim użyciu i udostępnianiu twoich informacji. Mamy nadzieję, że poniższe oświadczenie pomoże ci zrozumieć jak YouVersion zbiera, używa i chroni informacje, które dostarczasz przez naszą stronę lub aplikację. Nie użyjemy i nie udostępnimy twoich informacji z nikim poza przypadkami opisanymi w Polityce prywatności."
+      "what we collect": "Co gromadzimy i jak to używamy"
+      "your information title": "Informacje, które przekazujesz"
+      "device id title": "Unikalny identyfikator urządzenia"
+      "cookies title": "Ciasteczka LifeChurch.tv"
+      "log title": "Informacje logowania"
+      "communications title": "Komunikacja użytkownika"
+      "third party title": "Strony innych podmiotów"
+      "information use title": "Jak używamy twoje informacje?"
+      "information sharing title": "Jak udostępniamy twoje informacje?"
+      "information security title": "Bezpieczeństwo informacji"
+      "data integrity title": "Integralność danych"
+      "information access title": "Dostęp do danych osobowych i ich aktualizacja"
+      "questions title": "Pytania"
+      "questions text": "Pytania dotyczące polityki prywatności mogą być kierowane do: %{mailto_link}"
+    "terms": 
+      "title": "Warunki użytkowania"
+      "acceptance title": "Akceptacja warunków"
+      "description title": "Opis usługi"
+      "registration title": "Twoje zobowiązania rejestracyjne"
+      "privacy title": "Polityka prywatności LifeChurch.tv"
+      "account title": "Konto użytkownika, hasło i ochrona"
+      "international title": "Specjalne zalecenia dla użytkowników poza USA"
+      "contributions title": "Wkład w LifeChurch.tv"
+      "resale title": "Zakaz odsprzedaży usługi"
+      "modifications title": "Modyfikacje usługi"
+      "termination title": "Rezygnacja"
+      "links title": "Odnośniki"
+      "limitation title": "Ograniczenie odpowiedzialności"
+      "exclusions title": "Wykluczenia i ograniczenia"
+      "general title": "Informacje ogólne"
     "profile": 
       "first name": "Imię"
       "last name": "Nazwisko"
@@ -255,7 +292,7 @@ pl:
     "lables": "Etykieta"
     "labels label": "Etykiety:"
     "title": "Zakładki"
-    "not found": "Korzystanie z zakładek pozwoli ci zapamiętać werset, który ostatnio czytałeś, ułatwi znalezienie ulubionych fragmentów i zaprowadzi do ostatniego rozdziału, który czytałeś w określonej księdze. Aby dodać zakładkę, wybierz werset w czytniku Biblii, a następnie kliknij symbol zakładki. "
+    "not found": "Korzystanie z zakładek ułatwi ci znalezienie ulubionych fragmentów, lub wersetu, który ostatnio czytałeś w określonej księdze. Aby dodać zakładkę, wybierz werset w czytniku Biblii, a następnie kliknij przycisk Wybrane na górze czytnika. "
     "other user not found": "%{username} nie zachował jeszcze żadnych zakładek. "
     "successfully created": "Zakładka dodana"
     "successfully deleted": "Zakładka usunięta"
@@ -268,10 +305,10 @@ pl:
     "user badges": "Odznaczenia użytkownika %{user}"
   "registration": 
     "benefits title": "Doświadcz pełni korzyści"
-    "benefits blurb": "CO?! Nie masz konta w YouVersion? A jest tam tyle wspaniałych możliwości! Załóż konto teraz, a nie będziesz żałował -- są zrobione badania na ten temat... TO JEST W KONWENCJI GENEWSKIEJ! Jeżeli mi nie wierzysz, wyguglaj to. *NC*"
-    "plan blurb": "Hej, próbujesz rozpocząć plan czytania! Jest to fantastyczny sposób systematycznego kontaktu z Biblią. Załóż konto, by śledzić swoje postępy i uzyskać inne świetne możliwości. Możesz rozpocząć czytanie już za kilka sekund. "
-    "bookmark blurb": "Hej, próbujesz skorzystać z zakładki! Jest to fantastyczny sposób na zaznaczanie miejsc w Biblii. Załóż konto, żeby zaznaczać ulubione wersety i uzyskać inne świetne możliwości. Możesz rozpocząć wstawianie zakładek już za kilka sekund! "
-    "friends blurb": "Hej, próbujesz skontaktować się z przyjaciółmi! To fantastyczny sposób, by dotrzymać im kroku w poznawaniu Pisma. Załóż konto, żeby dodać przyjaciół  i uzyskać inne świetne możliwości. Możesz rozpocząć dodawać przyjaciół już za kilka sekund!"
+    "benefits blurb": "Utworzenie konta YouVersion daje ci dostęp do większej liczby funkcjonalności jak zakładki czy notatki. Pojawią się one na każdym urządzeniu, z którego się zalogujesz. Konto pomaga również w dzieleniu się Biblią z przyjaciółmi - poświęć więc minutę lub dwie i zarejestruj się!"
+    "plan blurb": "Hej, próbujesz rozpocząć plan czytania. Mądrze! Plany mogą pomóc ci uczynić z Biblii część twojego codziennego życia. Zaloguj się lub utwórz konto poniżej, aby rozpocząć!"
+    "bookmark blurb": "Hej, próbujesz skorzystać z zakładki. Świetnie! Zakładki pomogą ci zaznaczyć wersety, które chcesz zapamiętać, udostępnić lub oznaczyć jako ulubione. Zaloguj się lub utwórz konto poniżej, aby rozpocząć!"
+    "friends blurb": "Hej, próbujesz skontaktować się z przyjaciółmi! Dobry pomysł! Będziesz mógł podzielić się tym czego się uczysz i pomóc innym w regularnym czytaniu. Zaloguj się lub utwórz konto poniżej, aby rozpocząć!"
     "highlight blurb": "Wygląda na to, że chcesz zakreślić coś w Biblii. Świetnie! Zakreślenia pomogą ci zorganizować i przeglądać ulubione wersety. Zaloguj się lub utwórz konto poniżej, aby rozpocząć!"
     "note blurb": "Chcesz napisać notatkę? Doskonale! Notatki mogą pomóc ci w zapamiętaniu i uporządkowaniu prawd, które odkrywasz w Bożym Słowie. Zaloguj się lub utwórz konto poniżej, aby rozpocząć!"
   "audio": 
@@ -337,14 +374,17 @@ pl:
     "h2": "Słowo Boże jest z tobą."
     "h3": "YouVersion jest globalne"
     "h3 sub": "Dostępne w setkach języków na całym świecie."
-    "main": "Dziesiątki milionów ludzi używają Aplikacji Biblii ..."
+    "main": "Dziesiątki milionów ludzi używają Aplikacji Biblii, aby uczynić Słowo Boże częścią swojego życia. Pobierz darmową aplikację i uzykaj dostęp do zakładek, notatek oraz planów czytania z dowolnego miejsca. Ciesz się setkami przekładów i wersjami audio - dostępne na twoim mobilnym urządzeniu."
     "button h4": "Przejdź do youversion.com/download"
     "button h4 sub": "Na twoim urządzeniu mobilnym"
     "download now": "Pobierz teraz Aplikację Biblii"
     "what people": "Co ludzie mówią o darmowej Aplikacji Biblii..."
     "t1": "Zawsze mam ze sobą Słowo."
+    "t1 copy": "Zaznaczyłem zakładkami fragmenty, które są dla mnie ważne. Przeczytałem nawet całość w ciągu roku dzięki planom czytania."
     "t2": "Świetny program!"
+    "t2 copy": "Ta aplikacja pomaga mi systematycznie czytać Słowo Boże każdego dnia. Jest łatwa w użyciu i ma wiele możliwości... Jest świetna! "
     "t3": "Wspaniała aplikacja."
+    "t3 copy": "Świetna aplikacja z szerokim wyborem przekładów Biblii. ... Biblia w wersjach audio jest wspaniała i łatwa do zrozumienia."
     "iphone ipad": "iPhone/iPad"
     "android": "Android"
     "blackberry": "BlackBerry"
