--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -56,8 +56,8 @@ ru:
   "my notifications": "Управление уведомлениями"
   "my connections": "Связанные аккаунты"
   "my devices": "Связанные устройства"
-  "language name": "русский"
-  "sign in": "Войти"
+  "language name": "Русский"
+  "sign in": "Вход"
   "sign up": "Регистрация"
   "have an account": "Уже есть аккаунт?"
   "no account": "У Вас нет аккаунта?"
@@ -77,7 +77,7 @@ ru:
   "read this version": "Читать этот перевод"
   "reader": "Окно чтения"
   "lifechurch short url": "LifeChurch.tv"
-  "about": "О"
+  "about": "О нас"
   "jobs": "Вакансии"
   "privacy policy": "Политика конфиденциальности"
   "terms": "Условия"
@@ -156,7 +156,7 @@ ru:
     "selected": "Выбранное"
     "preferences": "Ностройки"
     "listen": "Слушать"
-    "parallel": "Параллельно"
+    "parallel": "Режим параллельного чтения"
     "full screen": "Полноэкранный режим"
     "about the version": "О переводе %{version}"
     "settings": "Настройки окна чтения"
@@ -171,7 +171,8 @@ ru:
     "profile form errors": "Ваш профиль не был обновлён по следующим причинам:"
     "email address": "Адрес эл. почты"
     "user name": "Имя пользователя"
-    "agreement": "Я соглашаюсь с %{terms_link} YouVersion.com"
+    "password title": "Пароль"
+    "agreement": "Я прочитал %{terms_link} YouVersion.com и согласен с ними."
     "terms and conditions": "Условия пользования и политика конфиденциальности"
     "facebook sign up success": "Отлично! Вы вошли с помощью Facebook. Чтобы продолжить, выберите имя пользователя YouVersion и пароль."
     "register": "Зарегистрироваться"
@@ -360,10 +361,10 @@ ru:
   "plans": "Планы"
   "registration": 
     "benefits title": "Получите доступ ко всем функциям!"
-    "benefits blurb": "Аккаунт YouVersion даст Вам доступ ко многим замечательным функциям, как, например, заметки и закладки. Они будут отображаться на любом устройстве, если Вы войдёте под своей учётной записью. Аккаунт также позволяет легче делиться Библией с друзьями, а регистрация занимает всего минуту!"
+    "benefits blurb": "Аккаунт YouVersion даст Вам доступ к таким замечательным функциям, как, например, заметки и закладки. Они будут отображаться на любом устройстве, если Вы войдёте под своей учётной записью. Аккаунт также позволяет легче делиться Библией с друзьями, а регистрация занимает всего минуту!"
     "plan blurb": "Возможно, Вы хотите начать план чтения? Великолепно! Планы помогут сделать Библию частью Вашей ежедневной жизни! Войдите в систему или создайте новый аккаунт ниже и начинайте!"
     "bookmark blurb": "Возможно, Вы хотите использовать закладки? Отлично! Закладки помогут Вам отслеживать те стихи, которые Вы хотите запомнить, показать друзьям или просто добавить в избранное. Войдите в систему или создайте новый аккаунт, и приступайте!"
-    "friends blurb": "Возможно, Вы хотели бы общаться с друзьями? Отличная идея! Вы сможете делиться тем, что изучаете и помогать друг другу оставаться на верном пути при чтении по планам. Войдите в систему или создайте новый аккаунт, и приступайте!"
+    "friends blurb": "Возможно, Вы хотели бы общаться с друзьями? Отличная идея! Вы сможете делиться тем, что изучаете, и помогать друг другу оставаться на верном пути при чтении по планам. Войдите в систему или создайте новый аккаунт, и приступайте!"
     "highlight blurb": "Возможно, Вы хотите выделить цветом стихи Писания? Отлично! Выделение цветом помогает Вам организовывать и отслеживать свои любимые стихи. Войдите в систему или создайте аккаунт, и начинайте!"
     "note blurb": "Возможно, Вы хотите создать заметку о Писании? Отлично! Заметки помогут Вам запомнить и организовать истины, которые Вы откроете для себя в Слове Божием. Войдите в систему или создайте аккаунт, и начинайте!"
   "audio": 
