--- a/config/locales/zh_cn.yml
+++ b/config/locales/zh_cn.yml
@@ -31,7 +31,7 @@ zh_CN:
   "you are now following": "您已成功关注  %{username}"
   "you are no longer following": "您已取消关注  %{username}"
   "user follows": "%{user} 关注了您。"
-  "user does not follow": "%{user} 已取消对您的关注。"
+  "user does not follow": "%{user} 还没有关注您。"
   "no following found self": "您还没有关注任何人。您可以访问  <a href='%{link}'>Find Friends</a> 并寻找朋友！"
   "no followers found self": "目前还没有人关注您。请您访问 <a href='%{link}'>寻找朋友</a> 页面，就可以找到一些朋友啦！ "
   "no followers found other": "现在还没有人关注%{username}。"
@@ -56,7 +56,7 @@ zh_CN:
   "my notifications": "管理通知"
   "my connections": "已绑定帐户"
   "my devices": "已绑定设备"
-  "language name": "中国的"
+  "language name": "简体中文"
   "sign in": "登录"
   "sign up": "注册"
   "have an account": "已有帐户？"
@@ -162,6 +162,7 @@ zh_CN:
     "settings": "阅读器设置"
     "invalid chapter title": "关于这个版本"
     "invalid chapter text": "所选择的章节不在目前的圣经版本中。"
+    "invalid secondary chapter text": "在您第二喜欢的圣经版本中，这个章节不存在。"
     "select another chapter": "选择另外的章节"
     "view in reader": "在阅读版面查看%{reference}"
     "about the": "关于"
@@ -170,6 +171,7 @@ zh_CN:
     "profile form errors": "以下错误阻止您更新个人资料:"
     "email address": "电子邮件地址"
     "user name": "用户名"
+    "password title": "密码"
     "agreement": "我同意YouVersion的规定和条例 %{terms_link}.。 "
     "terms and conditions": "声明和条款"
     "facebook sign up success": "恭喜！您已通过Facebook授权。请输入您的用户名和密码并继续。"
@@ -210,7 +212,7 @@ zh_CN:
     "my likes": "我喜欢的"
     "user likes": "%{user}所喜欢的"
     "revised date": "最后一次修改在%{date}"
-    "update email copy": " 输入一个新的电邮地址和点击『更新电邮』。我们将发送一个链接给您来确认您的新电邮地址。"
+    "update email copy": " 输入一个新的电邮地址再点击『更新电邮』键。我们将发送一个链接给您来确认您的新电邮地址。"
     "update email button": "更新电邮"
     "update email check": "请查看您的电邮并点击链接来确认您的新电邮地址。"
     "confirm update email success": "谢谢！您已经成功更新了你的电邮地址。"
@@ -222,6 +224,80 @@ zh_CN:
     "yes reset": "是的，重设我的密码"
     "yes reset and log out": "是的，请让我登出并重设我的密码"
     "forgot password": "忘记密码？"
+    "privacy": 
+      "policy": "%{youversion} 隐私条款"
+      "intro": "YouVersion，作为LifeChurch.tv 拥有并运营的网站和应用软件，知道您关心自己的信息是如何被使用和分享的。我们希望以下的说明能够帮助您理解YouVersion 将如何收集，使用和保护您向我们提供的信息。我们不会在隐私条款叙述的情况之外使用或者与其他人分享您的信息。"
+      "what we collect": "我们收集的信息及其用途"
+      "your information title": "您提供的信息"
+      "your information text": "当您注册YouVersion 的帐户，或者其他 LifeChurch.tv 的服务或任何需要注册的活动的时候，我们会向您询问您的个人资料（包括您的姓名，邮件地址和一个帐户密码）。我们会把您申请帐户时提交的资料与LifeChurch.tv 其他服务项目或者第三方所提供的信息合并，以便我们能够向您提供更好的服务并提高我们服务的质量。对于某些服务，我们会允许您决定是否合并这些信息。"
+      "device id title": "唯一设备身份"
+      "device id text": "当您使用YouVersion圣经软件时，我们可以获取您的唯一设备身份（“UDID”）和/或IP地址。通过您的UDID，我们可以为您提供量身定做的服务。获取UDID信息是为了统计使用我们的服务或部分服务的设备总数，跟踪使用总量，分析数据，以及更有效地与您沟通。我们可以把您的UDID和第三方信息结合起来，让您获得更佳体验，提升我们的服务。我们不会与第三方共享与您的UDID相关的个人信息。"
+      "cookies title": "Lifechurch.tv 网站的 cookies"
+      "cookies text": "当您访问%{link}时，我们可以发送一个或多个cookie到您的电脑，这样我们就能识别您的浏览器。（Cookie就是一种小型文档，包含一连串的字符。）接受我们的cookie可以使浏览器在您浏览不同网页的时候记忆您的用户偏好。虽然大多数浏览器默认接受cookie，但您可以设置浏览器拒绝所有cookie，或提醒您正在接收cookie。如果您关闭了cookie的接收，YouVersion的部分功能和服务将无法正常进行。"
+      "log title": "日志信息"
+      "log text": "当您使用LifeChurch.tv服务时，我们的服务器会在您访问我们的网站时自动记录您的浏览器所发送的信息。这些服务器记录的信息包括您的网页请求，IP地址，浏览器类型，浏览器语言，请求日期与时间，以及可以识别您的浏览器的一个或多个cookie。"
+      "communications title": "用户讨论"
+      "communications text": "您通过 %{link} 提交的个人信息和个人请求会被发送到群组管理员那里。群组管理员或者其中一个管理员将会处理这些信息。当您通过发送电子邮件或者其他信息交流方式给LifeChurch.tv 所属的任何一个网站，我们将记录这些信息来处理您的问题，回应您的请求并改善我们的服务。"
+      "third party title": "第三方站点"
+      "third party text": "本隐私政策仅适用于由LifeChurch.tv所有并运营的网站和应用程序。 LifeChurch.tv 不能控制其他从我们的网页和服务链接出去的其他网站。这些其他的网站可能在您的电脑上储存它们的缓存或其他文件，收集数据或者要求您的个人资料。如果选择访问他们的网站，您需要详细了解他们各自的隐私政策。"
+      "information use title": "我们会如何使用您的信息？"
+      "information use text": "当您注册一个要求注册的特定服务的时候，我们要求您提供个人信息。如果LifeChurch.tv 使用这些信息的目的与与当初收集信息的目的不同，我们在使用前将首先征求您的同意。除隐私政策或其他特别服务条款明确规定的目的外，我们不会收集或者使用任何敏感性的信息，除非我们事先已取得您的同意。您可以拒绝向我们的任何服务提交个人信息，在这种情况下，LifeChurch.tv 有可能不能够给您提供相关的服务。"
+      "information sharing title": "我们会如何分享您的信息？"
+      "information sharing text": "LifeChurch.tv 不会与 LifeChurch.tv 以外的其他机构分享您的个人信息。然而若我们有充分的理由相信存取、使用、保存或者披露此类信息对下列情况是合理必要时，LifeChurch.tv 可能会分享您的个人信息： a）满足任何适用的法律、法规，法定程序或强制性的政府要求， （b）强制性执行适用的使用条款，包括对潜在违规行为的调查。（c）侦查、预防，或以其他方式解决诈欺、安全性或技术性问题，或（d）在法律要求或允许下，保护 LifeChurch.tv、其服务使用者或公众的权利、生命财产或安全以使其免受伤害。"
+      "information security title": "信息安全"
+      "information security text": "LifeChurch.tv 采取适当的安全措施来防守未经许可的存取、改动、披露或者数据的破坏。这包括内部审查我们的数据收集、储存与处理的行动和安全措施，还有实质的安全措施来防止非法进入我们储存个人数据的系统。我们只准许有需要取得信息来营运、开发，或提升我们服务的 LifeChurch.tv 员工、承包商和代理人使用这些个人信息。这些人员都受保密义务的约束，如果不履行这些义务，他们会受到处罚，包括终止合约和刑事起诉。"
+      "data integrity title": "数据完整性"
+      "data integrity text": "LifeChurch.tv仅按照信息收集时的目的处理信息，并遵守隐私政策或相关服务适用的隐私声明的规定。我们审查数据收集、储存和处理的行为，以确保只收集、储存和处理那些提供或完善我们服务所必须的个人信息。我们采取合理的步骤以确保我们处理的个人信息是正确、完整的，但是我们依赖用户自己在必要时更新或更改他们的个人信息。"
+      "information access title": "获取并更新个人信息"
+      "information access text": "当您使用任何LifeChurch.tv的服务时，我们会真诚地努力为您提供个人信息访问服务，无论是改正不准确的数据，或者按您要求删除相关数据，除非依法要求保留或者出于合法服务的目的必须保留。在处理这些请求前，我们请每个用户确认身份和要求获取、改正或者删除的信息，我们可能会拒绝处理那些不合理的重复、系统性的请求、与技术努力不相称的请求、妨害他人隐私的请求、或者非常不切实际的请求（例如，涉及到保存在备份磁带上的信息的请求），或者其他非必需访问的请求。我们提供信息访问和修改服务，此服务是免费的，除非提供此服务需要付出不相称的努力。我们的一些服务有不同的程序来存取，纠正或删除用户的个人信息。"
+      "enforcement title": "强制条款"
+      "enforcement text": "LifeChurch.tv定期地审查其对隐私政策的遵守履行。当我们接到有关隐私问题的正式书面投诉时，我们的政策是就用户的顾虑，联系做出投诉的用户。我们将与适当的监管机构配合，包括当地的数据保护部门，以解决就个人资料转让问题，在LifeChurch.tv和个人之间不能解决的投诉。"
+      "questions title": "问题"
+      "questions text": "任何与个人隐私政策有关的问题将被转发到%{mailto_link}"
+    "terms": 
+      "title": "使用条款"
+      "acceptance title": "接受使用条款"
+      "acceptance text": "LifeChurch.tv通过其网站%{home_link} ('YouVersion')在因特网和全球信息网(以下称\"网络“）上提供的服务，须受以下使用条款的约束。 LifeChurch.tv可能不时更新使用条款而不另行通知，这些使用条款的最新版本保存在%{terms_link}。在使用YouVersion时，您也应受到所有在YouVersion网站不时发布的附加指引或规则的约束。通过参考这些使用条款，所有前述指引或规则已整合。请通过电子邮件 %{mailto_link}举报违反使用条款的行为。"
+      "description title": "服务说明"
+      "description text": "LifeChurch.tv通过YouVersion免费向用户提供多样化的服务，包括但不限于在线观看视频，博客博文和评论，文章，其他各种通讯工具，论坛和个性化的内容。在使用YouVersion时，您理解这种使用可能包括与LifeChurch.tv的通信，包括但不限于服务通告，行政信息，和您个别订阅的其他信息。您理解并同意，您自己负责获得YouVersion的使用权，这可能包括设备和第三方费用（例如互联网服务商费，通话费，或与消息传递和显示有关的其他费用）。"
+      "registration title": "您需要注册"
+      "registration text": "你确认并同意：%{item}（a）根据YouVersion登记表格的要求，提供真实，准确，最新及完整的个人信息（以下称“登记数据”），和 %{item}（b）维护和及时更新登记数据以保持真实、准确、最新、完整。如果LifeChurch.tv怀疑这些信息不真实、不准确或不完整，LifeChurch.tv有权暂停或终止您的帐号，并拒绝现在或将来对YouVersion的任何使用（或其任何部分的使用）。 LifeChurch.tv关注其所有用户，特别是儿童的安全和隐私。出于这个原因，允许自己13岁以下的孩子使用YouVersion的父母必须确认：YouVersion旨在吸引广大的读者，作为孩子的法定监护人，确定YouVersion是否适合您的孩子是您的责任。"
+      "privacy title": "LifeChurch.tv隐私政策"
+      "privacy text": "您的注册资料和其他信息受到我们的隐私政策（位于%{terms_link}）所约束。您了解，通过YouVersion 的使用，您同意这些信息的收集和使用（如隐私政策所列），包括由%{lifechurch_link} 把这些信息转移给美国或者其他国家储存，处理和使用。"
+      "account title": "会员帐号，密码和安全性"
+      "account text": "在完成You Version 的注册过程中，您将收到一个密码和帐户设置。您对密码和帐户有保密责任，并且对于在您的帐户和密码下而发生的一切活动，您承担全部责任。您同意： %{item}(a) 立刻通知 LifeChurch.tv 一切未经授权的使用您的帐号或者密码或者其他违反数据安全的行为，和%{item}(b) 确保您在每次使用您的帐号之后安全退出。"
+      "conduct title": "会员行为"
+      "interstate title": "LifeChurch.tv网络的州际沟通性质"
+      "interstate text": "您确认在使用YouVersion 的时候， 您将通过LifeChurch.tv 的计算机网络对外发送信息，其中部分信息分布到全球。所以，不管您在发送信息的时候身在何处，有些原本是属于州内性质的信息传送也有可能成为州际性的信息传送。相应地，您确认在使用YouVersion 的时候会产生洲际数据交换。"
+      "international title": "国际用户特别注意"
+      "international text": "认识到互联网络的全球性，您同意遵守所有关于互联网行为和可接受内容的所有地方行法规，具体而言，您同意遵守所有关于从美国或者您居住的国家传输出口的技术数据适用的法律。"
+      "content title": "内容已经提交，可以用于服务了"
+      "contributions title": "向LifeChurch.tv捐赠"
+      "contributions text": "在提交任何意见，建议，文件，和计划（“提案”）给LifeChurch.tv 时，您将确认并同意：%{item}(a) 您的提案中不包括任何机密或者知识产权信息； %{item}(b) LifeChurch.tv 对您的提案不承担任何明示或默示的保密义务；%{item}(c) LifeChurch.tv 有权为任何目的、以任何方式，通过全球任何媒体使用或者公开（或者不使用或不公开）您的提案； %{item}(d) LifeChurch.tv 可能已经拥有与您的提案相类似的处于筹划或者开发阶段的方案；%{item}(e) 您的提案将自动成为 LifeChurch.tv 的财产，但是LifeChurch.tv 无需对您承担任何义务； %{item}(f) 在任何情况下，您都无权向LifeChurch.tv 要求赔偿或者补偿。"
+      "indemnity title": "补偿和责任免除"
+      "resale title": "不得转售服务"
+      "resale text": "您同意不会为了商业目的而复制，复印，出售，交易，贩卖或者开发任何YouVersion 的 内容（包括您的LifeChurch.tv 的用户名）、YouVerion 的使用，或者访问YouVerion 。"
+      "storage title": "关于使用和存储的惯例"
+      "modifications title": "服务的修改"
+      "modifications text": "不管是否事先通知，LifeChurch.tv 保留在任何时候，不定期地，暂时性或者永久性修改或者中断YouVersion (或者其中任何部分)的权利。您同意LifeChurch.tv 不必就YouVersion的任何修改、暂停或终止而对您或者任何第三方承担任何的责任。"
+      "termination title": "终止服务"
+      "termination text": "您同意，在特定情况下，LifeChurch.tv可以不事先通知，而自行决定在任何时间以任何理立即终止您的LifeChurch.tv 的帐号和您对YouVersion 的访问权，并且LifeChurch.tv对于终止您的帐户或者访问权无需向您或者任何第三方承担任何责任。"
+      "dealings title": "第三方须知"
+      "dealings text": "您确认，您与任何在YouVersion 上认识和找到的团体之间的交易往来只存在于您们双方之间。您同意LifeChurch.tv 将对由于这些交易往来而产生的任何损失和损害不负任何责任和义务。"
+      "links title": " 链接"
+      "rights title": "Lifechurch.tv的所有权"
+      "limitation title": "有限责任"
+      "exclusions title": "排除和限制"
+      "exclusions text": "有些司法条例不允许排除某些担保或者限制，或者排除对于意外的或者间接的损失的责任。因此，以上涉及的第19条和第20条的限制可能不适用于您的情况。"
+      "beneficiaries title": "无第三方受益人"
+      "beneficiaries text": "您同意，除非在使用条款里另有规定，本协议没有第三方受益人。"
+      "notice title": "通知"
+      "notice text": "LifeChurch.tv 会通知您关于使用条款的修改，通知的方式包括但不仅限于电子邮件，普通邮件，手机短信，手机多媒体信息，文字信息，在YouVersion 上的公告，或者其他已知的或者正在开发中的合理的方式。"
+      "trademark title": "商标信息"
+      "trademark text": "与LifeChurch.tv有关的图标、服务标志、产品和服务名称都是LifeChurch.tv 的商标 （“LifeChurch.tv 标志”）。如果没有事先得到LifeChurch.tv 的同意，您同意不以任何方式使用或者展示 LifeChurch.tv 标志。"
+      "copyright title": "对版权或者知识产权侵害进行索赔的通知和程序"
+      "copyright text": "LifeChurch.tv 尊重他人的知识产权，我们也同样如此要求我们的用户，尤其是当涉及到使用 YouVersion服务时。 LifeChurch.tv 可以在适当情况下自行决定禁用和/或终止可能重复侵权的用户帐户。若您认为对您作品的某种复制侵犯了版权，或您的知识产权被妨害，请向LifeChurch.tv 的版权服务人员提供如下信息： %{item} 该问题作品的版权或知识财产权拥有者的电子或实体签名授权书; %{item} 您声称被侵犯版权或其他知识产权的书面描述; %{item} 以书面说明您声称在 YouVersion 服务上侵权的作品所在; %{item} 您的联络方式如地址、电话号码和可与您联络的电子邮件地址; %{item} 您有合理理由相信该争议项目并未获得版权人、其代理人或法律所授权的书面陈述; %{item} 您依据伪证处罚法作出的书面声明，以上通告的信息是准确的，您是版权或知识产权的所有者，或者您是版权或其他知识产权所有者的授权代表。 关于版权侵权或其他知识产权侵害之索赔的通知，请通过以下方式联系LifeChurch.tv 的代理人：%{newline} 书面邮件： LifeChurch.tv c/o - Contracts Coordinator %{newline} 4600 E. 2nd Street Edmond, OK 73034 %{newline} 电话： (405) 680-5433 %{newline} 传真： (405) 844-3002 %{newline} 电子邮箱 %{mailto_link}"
+      "general title": "一般信息"
     "profile": 
       "first name": "名"
       "last name": "姓"
@@ -243,6 +319,7 @@ zh_CN:
       "updated notifications": "您的通知设置被成功地更新了。"
       "notification errors": "以下错误导致无法更新您的通知："
       "edit": "编辑"
+      "bio": "个人介绍"
       "your current picture": "您的当前像片："
     "password": "密码"
     "notifications": 
@@ -299,11 +376,11 @@ zh_CN:
     "all versions": "所有%{language_name}版本"
   "donate": "捐赠"
   "download ad": 
-    "title": "下载免费的圣经软件"
-    "line 1": "几百种不同版本的圣经"
-    "line 2": "不同语言版本的圣经"
-    "line 3": "常伴您的身边。"
-    "download": "现在下载"
+    "title": "免费下载圣经软件"
+    "line 1": "有几百种不同版本的选择"
+    "line 2": "有几十种不同语言的支持"
+    "line 3": "让圣经随时随地陪伴您！"
+    "download": "点击下载圣经软件"
   "about page": 
     "relevancy": "关联"
     "relevancy copy": "在过去的年代，人们能够接触到圣经的方式是很有限的。现今的时代，这不再是个问题了。然而，很多有机会接触到圣经的人认为圣经当中的信息对于他们的生活完全没有用处。与此同时，有另外一些人却相信圣经与他们每日的生活紧密相连。"
@@ -341,6 +418,20 @@ zh_CN:
       "screencast": "YouVersion截屏"
     "links title": "媒体报道的链接"
   "mobile page": 
+    "h2": "上帝的话语与您同在！"
+    "h3": "YouVersion是全球化的主内事工"
+    "h3 sub": "提供给全世界几百种不同语言中的服务。"
+    "main": "全世界上千万的用户都在每天使用这款圣经应用软件。下载这款免费的程序，它可以让你随时随地地使用您的书签，笔记以及读经计划等。有几百种不同版本圣经，包括语音版本的，供您在移动设备中选择。好好享用吧！"
+    "button h4": "访问youversion.com/download"
+    "button h4 sub": "在您的移动设备上"
+    "download now": "现在就下载圣经软件"
+    "what people": "人们是如何评说这款免费的圣经软件..."
+    "t1": "我时常有神的话语。"
+    "t1 copy": "我已经将一些重要的经节打上标签了。拜读经计划所赐，我甚至已经在整年中完成全部阅读。"
+    "t2": "很好的程序！"
+    "t2 copy": "这款圣经应用软件可以帮助您每天阅读和整理神的话语。非常简易地就可以上手使用很多功能...您会喜欢上它的！"
+    "t3": "超赞的圣经应用软件。"
+    "t3 copy": "超赞的圣经应用软件可以大范围地选择圣经...语言版本的圣经更是简易可用。"
     "iphone ipad": "iPhone/iPad"
     "android": "安卓"
     "blackberry": "黑莓手机"
