--- a/config/locales/pt_BR.yml
+++ b/config/locales/pt_BR.yml
@@ -56,7 +56,7 @@ pt_BR:
   "my notifications": "Gerenciar Notificações"
   "my connections": "Contas Conectadas"
   "my devices": "Dispositivos Conectados"
-  "language name": "Português (Brasil)"
+  "language name": "Português"
   "sign in": "Entrar"
   "sign up": "Cadastrar-se"
   "have an account": "Já tem uma conta?"
@@ -147,7 +147,7 @@ pt_BR:
     "see my likes": "Ver Tudo que Curti"
     "my notes": "Minhas Anotações"
   "ref": 
-    "clear verses": "Apagar Versículos selecionados"
+    "clear verses": "Apagar Versículos Selecionados"
     "choose book and chapter": "Escolher Livro + Capítulo"
     "choose version": "Escolher Versão"
     "choose second version": "Escolher Versão Secundária"
@@ -171,6 +171,7 @@ pt_BR:
     "profile form errors": "O(s) seguinte(s) erro(s) impediu(ram) a atualização do seu perfil:"
     "email address": "Endereço de e-mail"
     "user name": "Nome de Usuário"
+    "password title": "Senha"
     "agreement": "Eu concordo com os %{terms_link} do YouVersion. "
     "terms and conditions": "termos e condições"
     "facebook sign up success": "Ótimo! Você se vinculou com o Facebook. Escolha um nome de usuário e senha no YouVersion para continuar."
@@ -268,7 +269,7 @@ pt_BR:
       "conduct title": "Conduta do Usuário"
       "conduct text": "Você entende que todas as informações, dados, textos, programas, músicas, sons, fotografias, gráficos, vídeos, mensagens, marcadores, publicações em blog ou forum, ou outros materiais ('Conteúdo'), sejam eles veiculados publicamente ou privadamente transmitidos são da exclusiva responsabilidade da pessoa de quem este conteúdo foi originado. Isso significa que você, e não a LifeChurch.tv, é inteiramente responsável por todo o Conteúdo que você enviar, publicar, enviar por e-mail, transmitir ou tornar disponível através do YouVersion. Embora a LifeChurch.tv faça o monitoramento do Conteúdo enviada ao YouVersion, a LifeChurch.tv não pode razoavelmente garantir a exatidão, integridade, qualidade ou adequação de tal Conteúdo. Você entende e concorda que usando o YouVersion, você poderá ser exposto a Conteúdo ofensivo, imoral ou censurável. Você concorda em não usar o YouVersion para:%{item}fazer upload, publicar, enviar e-mail, transmitir ou disponibilizar qualquer Conteúdo que seja ilegal, prejudicial, ameaçador, abusivo, ofensivo, difamatório, vulgar, obsceno, calunioso, invasivo da privacidade de outrem, odioso, discriminatório de raça ou etnia, ou de outra forma censurável;%{item}prejudicar minorias de qualquer forma;%{item}se passar por outra pessoa ou entidade, incluindo mas não limitado a, um funcionário da LifeChurch.tv, líder de fórum, guia ou anfitrião, ou declarar falsamente ou deturpar sua afiliação com uma pessoa ou entidade;%{item}forjar cabeçalhos ou manipular identificadores, a fim de disfarçar a origem de qualquer Conteúdo transmitido através do YouVersion;%{item}fazer upload, publicar, enviar e-mail, transmitir ou disponibilizar qualquer Conteúdo que você não tenha o direito de disponibilizar sob qualquer lei ou sob relações contratuais ou fiduciárias (tais como informações privilegiadas, exclusivas ou confidenciais recebidas ou divulgadas como conseqüência de relação de emprego ou contrato de confidencialidade);%{item}fazer upload, publicar, enviar e-mail, transmitir ou disponibilizar qualquer Conteúdo que viole qualquer patente, marca registrada, segredo comercial, direitos autorais ou outros direitos de propriedade ('Direitos') de qualquer das partes;%{item}fazer upload, publicar, enviar e-mail, transmitir ou disponibilizar qualquer publicidade, material promocional, 'junk mail', 'spam', 'correntes', 'esquemas de pirâmide' ou qualquer outra forma de solicitação não autorizada ou não solicitada;%{item}fazer upload, publicar, enviar e-mail, transmitir ou disponibilizar qualquer material que contenha software de vírus ou qualquer outro código de computador, arquivos ou programas projetados para interromper, destruir ou limitar a funcionalidade de qualquer software ou hardware ou equipamento de telecomunicações;%{item}interromper o fluxo normal de diálogo, ou agir de uma maneira que afete negativamente a capacidade de outros usuários para participar de trocas em tempo real;%{item}interferir ou interromper o YouVersion ou servidores ou redes conectadas ao YouVersion, ou desobedecer quaisquer exigências, procedimentos, políticas ou regulamentos de redes conectadas ao YouVersion;%{item}intencionalmente ou não intencionalmente violar qualquer lei aplicável local, estadual, nacional ou internacional, incluindo, mas não se limitando a, regulamentos promulgados pela 'U.S. Securities and Exchange Commission', qualquer regra de qualquer bolsa de valores nacional ou outras do tipo, incluindo, sem limitação, a Bolsa de Valores de Nova Iorque (NYSE), Bolsa de Valores Americana (AMEX) ou a NASDAQ, e quaisquer regulamentos que tenham força de lei;%{item}fornecer apoio material ou recursos (ou esconder ou dissimular a natureza, localização, fonte, ou propriedade de apoio material ou recursos) para qualquer organização designada pelo governo dos Estados Unidos como uma organização terrorista estrangeira nos termos da secção 219 da Lei da Imigração e Nacionalidade;%{item}'perseguir' ou assediar alguém; e/ou%{item}coletar ou armazenar dados pessoais sobre outros usuários em conexão com a conduta proibida e atividades previstas acima.%{item}A LifeChurch.tv fornece o YouVersion para benefício não compensado, pessoal e espiritual intangível e/ou religioso. Você reconhece que a LifeChurch.tv pode ou não pré-selecionar o Conteúdo, mas que a LifeChurch.tv e seus representantes terão o direito (mas não a obrigação) a seu exclusivo critério de pré-selecionar, recusar ou remover qualquer Conteúdo que esteja disponível via YouVersion, por qualquer motivo.%{line_break}Você reconhece, consente e concorda que a LifeChurch.tv pode acessar, preservar e divulgar informações e Conteúdo de sua conta  se requerida a fazê-lo por lei ou em boa fé de que tal acesso, registro ou divulgação é razoavelmente necessário para:%{item}(a) cumprir com algum processo legal;%{item}(b) fazer cumprir os TERMOS DE USO;%{item}(c) responder a reclamações de que tal Conteúdo viola direitos de terceiros;%{item}(d) responder às suas solicitações de serviço ao cliente; ou %{item}(e) proteger os direitos, propriedade ou segurança pessoal da LifeChurch.tv, seus usuários e o público.%{line_break}Você entende que o processamento técnico e a transmissão do YouVersion, incluindo seu Conteúdo, podem envolver %{item}(a) transmissões através de diversas redes; e %{item}(b) mudanças para ajuste e adaptação às exigências técnicas de conexão de redes ou dispositivos."
       "interstate title": "Natureza Interestadual das Comunicações da Rede LifeChurch.tv"
-      "interstate text": "Você reconhece que ao usar o YouVersion você estará enviando comunicações através das redes de computadores da LifeChurch.tv que estão localizados em todo o globo. Por isso, mesmo as comunicações que parecem intra-estado em sua natureza, podem resultar em uma transmissão de comunicação inter-estado independentemente de onde você esteja fisicamente localizado no momento da transmissão. Assim, você reconhece que o uso do YouVersion resulta em transmissões de dados inter-estado."
+      "interstate text": "Você reconhece que ao usar o YouVersion você estará enviando comunicações através das redes de computadores da LifeChurch.tv que estão localizados em todo o globo. Por isso, mesmo as comunicações que parecem ser intra-estado em sua natureza, podem resultar em uma transmissão de comunicação inter-estado independentemente de onde você esteja fisicamente localizado no momento da transmissão. Assim, você reconhece que o uso do YouVersion resulta em transmissões de dados inter-estado."
       "international title": "Advertências Especiais para o Uso Internacional"
       "international text": "Reconhecendo a natureza global da Internet, você concorda em seguir todas as regras locais referentes à conduta online e de Conteúdo aceitável. Especificamente, você concorda em seguir todas as leis aplicáveis referentes à transmissão de dados técnicos exportados dos Estados Unidos ou do país onde você reside."
       "content title": "Conteúdo Submetido ou Disponibilizado para Inclucão no Serviço"
@@ -326,7 +327,7 @@ pt_BR:
       "updated notifications": "Sucesso! Você atualizou suas configurações de notificação."
       "notification errors": "O(s) seguinte(s) erro(s) impediu(ram) a atualização das suas notificações:"
       "edit": "Editar"
-      "bio": "Sobre Mim"
+      "bio": "Biografia"
       "your current picture": "Sua Foto Atual:"
     "password": "Senha"
     "notifications": 
@@ -391,11 +392,11 @@ pt_BR:
     "download": "Baixar Agora"
   "about page": 
     "relevancy": "Relevância"
-    "relevancy copy": "Nas gerações passadas, o acesso das pessoas à Bíblia era muito limitado. Hoje esse não é mais o caso. No entanto, muitas pessoas que tem acesso à Bíblia acham que sua mensagem não se aplica a suas vidas. Ao mesmo tempo, há outros que acreditam que há uma conexão entre a Bíblia e suas experiências do dia-a-dia."
+    "relevancy copy": "Nas gerações passadas, o acesso das pessoas à Bíblia era muito limitado. Hoje esse não é mais o caso. No entanto, muitas pessoas que tem acesso à Bíblia acham que sua mensagem não se aplica a suas vidas. Ao mesmo tempo, há outras que acreditam que há uma conexão entre a Bíblia e suas experiências do dia-a-dia."
     "information revolution": "Revolução da Informação"
-    "information revolution copy": "Durante a última década, a Internet trouxe uma revolução que capacita as pessoas como nunca antes. Com a capacidade de compartilhar, contribuir, criar, transmitir e comunicar, é fácil mostrar quem somos e no que acreditamos para o resto do mundo."
-    "youversion copy": "Desde seu início em 1996, a missão da LifeChruch.tv tem sido levar pessoas a serem seguidores totalmente devotados a Cristo. Fazendo isso, nós procuramos novas formas de ajudar as pessoas a conectar a Bíblia ao seu dia-a-dia. Nossos métodos tem mudado com o passar dos anos com a incorporação de várias tecnologias e estratégias. Mas, no fundo, nosso foco continua relevante se nos esforçarmos constantemente para demonstrar e ensinar as pessoas de como a Palavra de Deus diz respeito a todos, não importa onde eles estão na vida."
-    "youversion copy 2": "O YouVersion representa uma nova fronteira nos esforços da LifeChurch.tv. Não estamos apenas construindo uma ferramenta para impactar o mundo usando uma tecnologia inovadora, mas mais importante, estamos trazendo as pessoas a um relacionamento com Deus a medida que elas descobrem a importância da Bíblia para suas vidas."
+    "information revolution copy": "Durante a última década, a Internet trouxe uma revolução que capacita as pessoas como nunca antes. Com a capacidade de compartilhar, contribuir, criar, transmitir e comunicar é fácil mostrar quem somos e no que acreditamos para o resto do mundo."
+    "youversion copy": "Desde seu início em 1996, a missão da LifeChruch.tv tem sido levar pessoas a serem seguidores totalmente devotos de Cristo. Fazendo isso, nós procuramos novas formas de ajudar as pessoas a se conectar com a Bíblia no seu dia-a-dia. Nossos métodos tem mudado com o passar dos anos com a incorporação de várias tecnologias e estratégias. Mas, no fundo, nosso foco continua relevante se nos esforçarmos constantemente para demonstrar e ensinar as pessoas sobre como a Palavra de Deus diz respeito a todos, não importa onde eles estejam."
+    "youversion copy 2": "O YouVersion representa uma nova fronteira nos esforços da LifeChurch.tv. Não estamos apenas construindo uma ferramenta para impactar o mundo usando uma tecnologia inovadora, mas mais importante, estamos trazendo as pessoas a um relacionamento com Deus na medida em que elas descobrem a importância da Bíblia nas suas vidas."
     "partners title": "Um Agradecimento Especial aos Nossos Parceiros"
     "translation title": "Nossas Equipes de Tradução"
   "press page": 
@@ -427,19 +428,19 @@ pt_BR:
     "links title": "Links de Cobertura de Mídia"
   "mobile page": 
     "h2": "A Palavra de Deus está com você."
-    "h3": "YouVersion é Mundial"
+    "h3": "YouVersion é Global"
     "h3 sub": "Disponível em centenas de idiomas em todo o mundo."
-    "main": "Milhares de pessoas estão usando o Aplicativo™ da Bíblia para tornar a Palavra de Deus uma parte de suas vidas diárias. Baixe o aplicativo gratuito e acesse os seus favoritos, notas e planos de leitura de qualquer lugar. Desfrute de centenas de versões, incluindo áudio, tudo em seu dispositivo móvel."
-    "button h4": "Ir para youversion.com / download"
+    "main": "Dezenas de milhões de pessoas estão usando o Aplicativo da Bíblia™ para tornar a Palavra de Deus parte de suas vidas. Baixe o aplicativo gratuito e acesse os seus marcadores, notas e planos de leitura de qualquer lugar. Desfrute de centenas de versões, incluindo áudio, tudo em seu dispositivo móvel."
+    "button h4": "Ir para youversion.com/download"
     "button h4 sub": "No Seu Dispositivo Móvel"
     "download now": "Baixar o Aplicativo da Bíblia Agora"
     "what people": "O que as pessoas estão dizendo sobre o aplicativo gratuito da Bíblia..."
     "t1": "Eu tenho sempre a Palavra."
-    "t1 copy": "Eu tenho passagens marcadas que são importantes para mim. Eu mesmo li tudo em um ano, graças aos planos de leitura."
+    "t1 copy": "Eu tenho marcado passagens que são importantes para mim. Eu até li tudo em um ano graças aos planos de leitura."
     "t2": "Excelente programa!"
     "t2 copy": "Esse aplicativo ajuda a manter-me organizado e lendo a Palavra de Deus todo dia. É fácil de usar e oferece vários resursos... Amo!"
     "t3": "Aplicativo maravilhoso."
-    "t3 copy": "Ótimo aplicativo com uma variedade grande de Bíblias para escolher... O áudio das Bíblias também são maravilhosos e de fácil compreensão."
+    "t3 copy": "Ótimo aplicativo com uma variedade grande de Bíblias para escolher... Os áudios das Bíblias também são maravilhosos e de fácil compreensão."
     "iphone ipad": "iPhone/iPad"
     "android": "Android"
     "blackberry": "BlackBerry"
