--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -395,14 +395,14 @@ en:
     subscribe to plan:                          "Start This Plan"
     previous day:                               "Previous Day"
     next day:                                   "Next Day"
-    reading completed (mark and show next):     "Next: %{next_reference}"
+    reading completed _ mark and show next:     "Next: %{next_reference}"
     which reading:                              "%{current} of %{total}"
     done reading:                               "Done"
     read today:                                 "View Today's Reading"
-    completion status (below percentage):       "Complete"
+    completion status _ below percentage:       "Complete"
     current progress html:                      "Day <b>%{day}</b> of <b>%{total_days}</b>"
-    start date (before date string):            "Start Date:"
-    end date (before date string):              "End Date:"
+    start date _ before date string:            "Start Date:"
+    end date _ before date string:              "End Date:"
     are you behind:                             "Falling a bit behind?"
     do you want to reset:                       "Want a do-over?"
     catch up text:                              "Shift today's reading back to your last completed reading (day %{last_completed_day} of the plan)."
