--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -170,6 +170,7 @@ en:
     select another chapter:                     "Pick a Different Chapter"
     view in reader:                             "View %{reference} in Reader"
   users:
+    no connection friends:                      "None of your %{connection} friends appear to be on YouVersion yet."
     creation form errors:                       "The following error(s) prevented creation of your account:"
     profile form errors:                        "The following error(s) prevented updating your profile:"
     email address:                              "Email Address"
