--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -481,6 +481,14 @@ en:
     headline:                                   "Everyone needs God’s Word."
     subhead:                                    "Help people around the world have the Bible at their fingertips."
     copy:                                       "Imagine if you could give everyone in the world a free Bible. When you give to YouVersion, you can do just that. We're alive during a time that others have only dreamed of &ndash; when anyone with a phone can access the Bible and experience the story of God's love for us. With your support, we can continue to help more people spend more time in Scripture."
+    amount:                                     "Donation amount (USD)"
+    name:                                       "Your name"
+    card number:                                "Credit card number"
+    card exp date:                              "Expiration date"
+    receipt:                                    "Email me a copy of my receipt."
+    preview:                                    "Preview Donation"
+    header copy:                                "Donate copy. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. *NC*"
+    header confirm copy:                        "Donate copy. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. *NC*"
   download ad:
     title:                                      "Download the Free Bible App"
     line 1:                                     "Hundreds of versions in many"
